# auto-app-panel

./: PLAN.md  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: publish.yaml
src/auto_app_panel/: __main__.py  detector.py  extractors.py  generator.py  types.py
tests/: test_detector.py  test_extractors.py  test_generator.py
tests/example/: pydantic_settings_example.py
tests/resources/: argparse_example.py  pydantic_settings_example.py
